--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
+    implementation group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    implementation 'org.hibernate:hibernate-core:5.2.6.Final'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'
+    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
 
     //database
     implementation 'com.h2database:h2:1.4.194'
